# flutter_distributor

./: .gitignore  Cargo.toml  README-ZH.md  README.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uninstall.ps1  uninstall.sh
apps/cli/: Cargo.toml  README-ZH.md  README.md
apps/cli/src/: config.rs  main.rs
apps/cli/src/cli/: analyze.rs  build.rs  mod.rs  package.rs  publish.rs  release.rs  run.rs  store.rs  upgrade.rs
apps/cli/src/cli/commands/: analyze.rs  mod.rs  package.rs  release.rs  store.rs  version_check.rs  workflow.rs
apps/cli/src/config/: config_impl.rs  distribute_options.rs  fastforge.rs  mod.rs  release.rs  release_job.rs
apps/cli/src/config/release/: mod.rs  release.rs
apps/cli/src/runtime/: mod.rs  workflow_runner.rs
crates/app_analyzer/: Cargo.toml  README.md
crates/app_analyzer/src/: lib.rs  main.rs  traits.rs
crates/app_analyzer/src/analyzers/: mod.rs
crates/app_analyzer/src/analyzers/android/: aab.rs  apk.rs
crates/app_analyzer/src/analyzers/ios/: ipa.rs
crates/app_analyzer/src/analyzers/macos/: dmg.rs
crates/app_analyzer/src/android/: aab.rs  apk.rs  mod.rs
crates/app_analyzer/src/ios/: ipa.rs  mod.rs
crates/app_analyzer/src/macos/: app.rs  dmg.rs  mod.rs
crates/app_builder/: Cargo.toml  README-ZH.md  README.md
crates/app_builder/src/: lib.rs  main.rs  traits.rs  types.rs
crates/app_builder/src/builders/: mod.rs
crates/app_builder/src/builders/custom/: mod.rs
crates/app_builder/src/builders/flutter/: mod.rs
crates/app_builder/src/builders/gradle/: mod.rs
crates/app_builder/src/commands/: flutter.rs  mod.rs
crates/app_builder/src/custom/: mod.rs
crates/app_builder/src/flutter/: command.rs  flutter_version.rs  mod.rs  pubspec_info.rs
crates/app_builder/src/gradle/: mod.rs
crates/app_builder/src/xcode/: helpers.rs  ios.rs  macos.rs  mod.rs
crates/app_builder/tests/: README.md  flutter_builder.rs  gradle_builder.rs  xcode_builder.rs
crates/app_builder/tests/support/: mod.rs
crates/app_packager/: Cargo.toml  README.md
crates/app_packager/src/: lib.rs  traits.rs  types.rs
crates/app_packager/src/android/: aab.rs  apk.rs
crates/app_packager/src/ios/: ipa.rs
crates/app_packager/src/linux/: appimage.rs  deb.rs  direct.rs  pacman.rs  rpm.rs  zip.rs
crates/app_packager/src/macos/: dmg.rs  mod.rs  pkg.rs  zip.rs
crates/app_packager/src/ohos/: app.rs  hap.rs
crates/app_packager/src/packagers/: mod.rs
crates/app_packager/src/packagers/android/: aab.rs  mod.rs
crates/app_packager/src/packagers/ios/: ipa.rs
crates/app_packager/src/packagers/linux/: appimage.rs  deb.rs  direct.rs  mod.rs  pacman.rs  rpm.rs  zip.rs
crates/app_packager/src/packagers/macos/: dmg.rs  pkg.rs  zip.rs
crates/app_packager/src/packagers/ohos/: app.rs  hap.rs  mod.rs
crates/app_packager/src/packagers/web/: direct.rs  zip.rs
crates/app_packager/src/packagers/windows/: direct.rs  exe.rs  msix.rs  zip.rs
crates/app_packager/src/web/: direct.rs  mod.rs  zip.rs
crates/app_packager/src/windows/: direct.rs  exe.rs  mod.rs  msix.rs  zip.rs
crates/app_publisher/: Cargo.toml  README.md
crates/app_publisher/src/: lib.rs  traits.rs  types.rs
crates/app_publisher/src/appgallery/: mod.rs
crates/app_publisher/src/appstore/: mod.rs
crates/app_publisher/src/custom/: mod.rs
crates/app_publisher/src/fir/: mod.rs
crates/app_publisher/src/firebase/: mod.rs
crates/app_publisher/src/firebase_hosting/: mod.rs
crates/app_publisher/src/github/: mod.rs
crates/app_publisher/src/pgyer/: mod.rs
crates/app_publisher/src/playstore/: mod.rs
crates/app_publisher/src/publishers/: mod.rs
crates/app_publisher/src/publishers/appgallery/: mod.rs
crates/app_publisher/src/publishers/appstore/: mod.rs
crates/app_publisher/src/publishers/custom/: mod.rs
crates/app_publisher/src/publishers/fir/: mod.rs
crates/app_publisher/src/publishers/firebase/: mod.rs
crates/app_publisher/src/publishers/firebase_hosting/: mod.rs
crates/app_publisher/src/publishers/github/: mod.rs
crates/app_publisher/src/publishers/pgyer/: mod.rs
crates/app_publisher/src/publishers/playstore/: mod.rs
crates/app_publisher/src/publishers/s3/: cos.rs  mod.rs  oss.rs  qiniu.rs
crates/app_publisher/src/s3/: cos.rs  mod.rs  oss.rs  qiniu.rs
crates/app_publisher/src/vercel/: mod.rs
crates/dmg_maker/: Cargo.toml  README-ZH.md  README.md
crates/dmg_maker/examples/: background_color.json  build_examples.sh  compat_legacy.json  format_filesystem.json  standard.json  window.json
crates/dmg_maker/examples/assets/: README.md  Readme.txt  SampleIcon.icns
crates/dmg_maker/src/: config.rs  ds_store.rs  error.rs  lib.rs  main.rs
crates/fastforge/: Cargo.toml  README-ZH.md  README.md
crates/fastforge/src/: main.rs
crates/fastforge/src/cli/: analyze.rs  build.rs  mod.rs  package.rs  publish.rs  release.rs  upgrade.rs  workflow.rs
crates/fastforge/src/config/: fastforge.rs  mod.rs  release.rs
crates/fastforge/src/runtime/: workflow_runner.rs
crates/store_api/: Cargo.toml  README.md
crates/store_api/src/: lib.rs
crates/store_api/src/appstore/: apps.rs  auth.rs  listings.rs  manager.rs  mod.rs  releases.rs  reviews.rs
crates/store_api/src/googleplay/: apps.rs  auth.rs  listings.rs  manager.rs  mod.rs  releases.rs  reviews.rs
crates/store_api_core/: Cargo.toml  README.md
crates/store_api_core/src/: error.rs  lib.rs  store_manager.rs
crates/store_api_core/src/api/: apps.rs  listings.rs  mod.rs  releases.rs  reviews.rs
crates/store_api_core/src/model/: app.rs  listing.rs  mod.rs  release.rs  review.rs
crates/store_clients/app_store_connect/: Cargo.toml
crates/store_clients/app_store_connect/src/: lib.rs
crates/store_clients/google_play_console/: Cargo.toml
crates/store_clients/google_play_console/src/: lib.rs
crates/stores/app_store_connect/: Cargo.toml
crates/stores/app_store_connect/src/: auth.rs  client.rs  context.rs  main.rs  output.rs
crates/stores/google_play_console/: Cargo.toml
crates/stores/google_play_console/src/: auth.rs  client.rs  context.rs  lib.rs  main.rs  output.rs
(+285 files in other folders)
