[workspace]
resolver = "3"
members = [
  "crates/core",
  "crates/app_analyzer",
  "crates/app_builder",
  "crates/app_packager",
  "crates/app_publisher",
  "crates/dmg_maker",
  "crates/store_api_core",
  "crates/store_api",
  "apps/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["LiJianying <lijy91@foxmail.com>"]
license = "MIT"
