[package]
name = "fastforge_cli"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
description = "The ultimate all-in-one app packaging and distribution tool"
license.workspace = true

[[bin]]
name = "fastforge"
path = "src/main.rs"

[dependencies]
fastforge_core = { path = "../../crates/core" }
fastforge_app_analyzer = { path = "../../crates/app_analyzer" }
fastforge_app_builder = { path = "../../crates/app_builder" }
fastforge_app_packager = { path = "../../crates/app_packager" }
fastforge_app_publisher = { path = "../../crates/app_publisher" }
fastforge_store_api = { path = "../../crates/store_api" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.28"

[dev-dependencies]
tempfile = "3"
