[package]
name = "app_analyzer"
version = "0.0.1"
edition = "2024"
authors = ["LiJianying <lijy91@foxmail.com>"]
description = "A unified app builder"
license = "MIT"

[dependencies]
log = "0.4.28"
plist = "1.7"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
