[package]
name = "fastforge_app_analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A unified app builder"
license.workspace = true

[dependencies]
fastforge_core = { path = "../core" }
log = "0.4.28"
plist = "1.7"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
