[package]
name = "fastforge_app_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A unified app builder"
license.workspace = true

[dependencies]
fastforge_core = { path = "../core" }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.23.0"
