[package]
name = "fastforge_app_packager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A unified app packager"
license.workspace = true

[dependencies]
fastforge_core = { path = "../core" }
dmg_maker = { path = "../dmg_maker" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
