[package]
name = "app_publisher"
version = "0.0.1"
edition = "2024"
authors = ["LiJianying <lijy91@foxmail.com>"]
description = "A unified app publisher"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
