[package]
name = "fastforge_app_publisher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A unified app publisher"
license.workspace = true

[dependencies]
fastforge_core = { path = "../core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
