[package]
name = "dmg_maker"
version = "0.0.1"
edition = "2024"
authors = ["LiJianying <lijy91@foxmail.com>"]
description = "Rust implementation of appdmg-compatible DMG maker"
license = "MIT"

[dependencies]
anyhow = "1"
csscolorparser = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
