[package]
name = "fastforge_store_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Concrete app store management API clients"
license.workspace = true

[dependencies]
fastforge_store_api_core = { path = "../store_api_core" }
fastforge_app_store_connect = { path = "../store_clients/app_store_connect" }
fastforge_google_play_console = { path = "../store_clients/google_play_console" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "macros"] }
