[package]
name = "fastforge_store_api_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core traits and types for app store management APIs"
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
