[package]
name = "fastforge_app_store_connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "App Store Connect API client"
license.workspace = true

[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.14.0"
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

