[package]
name = "fastforge_google_play_console"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Google Play Console API client"
license.workspace = true

[dependencies]
bytes = "1.9"
futures-core = "0.3"
progenitor-client = "0.14.0"
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"

